Hide overflow on x axis (fixes #8)

--- a/resources/style.css
+++ b/resources/style.css
@@ -4,6 +4,7 @@ body {
     padding: 0px;
     width: 100vw;
     height: 100vh;
+    overflow-x: hidden;
 }
 
 html {
